Update internship readme files

--- a/SRDC - Internship/Assignment2/backend/src/main/resources/application.properties
+++ b/SRDC - Internship/Assignment2/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/Messaging
-spring.datasource.username=postgres
-spring.datasource.password=M.hbG6zx
+spring.datasource.url = jdbc:postgresql://localhost:5432/messaging
+spring.datasource.username=mailuser
+spring.datasource.password=mailpassword
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
